tests/cli/snapshots/check_command_spec__test__tests__cli__fixtures__check__call.graphql.snap
---
source: tests/cli/check.rs
expression: output_string
---
Config tests/cli/fixtures/check/call.graphql ... ok
N + 1 detected: 0
