tests/cli/snapshots/check_command_spec__test__tests__cli__fixtures__check__jsonplaceholder.graphql.snap
---
source: tests/cli/check.rs
expression: output_string
---
Config tests/cli/fixtures/check/jsonplaceholder.graphql ... ok
N + 1 detected: 1
